[package]
name = "crypto_kline_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures-util = "0.3"
url = "2.2"
tui = "0.19"
crossterm = "0.28.1"
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
chrono = "0.4.38"